--- a/piws/debian/control
+++ b/piws/debian/control
@@ -1,4 +1,4 @@
-Source: cubicweb-neurospinweb
+Source: cubicweb-piws
 Section: web
 Priority: optional
 Maintainer: nsap <antoine.grigis@cea.fr>
@@ -6,16 +6,16 @@ Build-Depends: debhelper (>= 7), python (>= 2.6), python-support
 Standards-Version: 3.9.3
 XS-Python-Version: >= 2.6
 
-Package: cubicweb-neurospinweb
+Package: cubicweb-piws
 Architecture: all
 Depends:
  cubicweb-common (>= 3.19.0),
  ${python:Depends},
  ${misc:Depends},
-Description: neurospinweb
+Description: piws
  CubicWeb is a semantic web application framework.
  .
- neurospinweb
+ piws
  .
  This package will install all the components you need to run the
- cubicweb-neurospinweb application (cube :)..
+ cubicweb-piws application (cube :)..
